syntax = "proto3";
package proto;
option go_package = "./proto";

service Person {
    rpc addPerson(Name)returns(Id);
    rpc getPerson(Id)returns(PersonData);
    rpc updatePerson(PersonData)returns(Error);
    rpc deletePerson(Id)returns(Error);
}

service Event {
    rpc addEvent(EventData)returns(Id);
    rpc getEvent(Id)returns(EventData);
    rpc updateEvent(EventData)returns(Error);
    rpc deleteEvent(Id)returns(Error);
}

service PersonsEvents {
    rpc addPersonToPersonsEvent(PersonsEventsInfo)returns(Id);
    rpc getByPersonId(Id)returns(PersonsEventsInfo);
    rpc getByEventId(Id)returns(PersonsEventsInfo);
    rpc updatePersonsEvents(PersonsEventsInfo)returns(Error);
    rpc deletePersonsEvents(Id)returns(Error);
}

message Id {
    int64 id = 1;
}
message Name {
    string name = 1;
}
message Error {
    string error = 1;
}

message PersonData {
    Id id = 1;
    Name name = 2;
    repeated EventData events = 3;
}

message EventData {
    Id id = 1;
    Name name = 2;
    string date = 3;
    repeated PersonData persons = 4;
}

message PersonsEventsInfo {
    Id id = 1;
    Id personId = 2;
    Id eventId = 3;
    float spent = 4;
    int32 factor = 5;
    PersonData person = 6;
    EventData event = 7;
}

